# robotpuzzle

./: .gitignore  Puzzle_12.json  Puzzle_24.json  Puzzle_4.json  README.md  SPEC.md  canny_tuner.py  config.json  detect_pieces.py  gamemanager.py  highlight_pieces.py  live_puzzle_solver.py  luxonis_rgb.py  nfc_reader.py  piece_highlighter.py  puzzle_calibration.py  puzzle_capture.py  puzzle_gui.py  puzzle_solution.py  puzzle_solver.py  pyproject.toml  rgb_control.py  send_pose.py  send_test.py  solved_puzzle_12.json  solved_puzzle_12_with_offsets.json  solved_puzzle_24.json  solved_puzzle_24_with_offsets.json
configs/: Puzzle_12.json  Puzzle_24.json  config.json  offsetmap_12.json  offsetmap_24.json
